--- a/style.css
+++ b/style.css
@@ -34,9 +34,9 @@ li {
     margin-bottom: 10px;
 }
 
-/* Bolded text in list (now white) */
-b {
-    color: white;
+/* Bolded text in list (forcefully set to white) */
+b, strong {
+    color: white !important;
 }
 
 /* Code styling */
