--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Inria Serif";
-    src: url("assets/fonts/inria.ttf");
+    src: url("https://st.1001fonts.net/img/txt/dHRmLjU0LjAwMDAwMC5TVzV5YVdFZ1UyVnlhV1lnUW05c1pDQkpkR0ZzYVdNLjA/inria-serif.bold-italic.png");
 }
 
 html {
