--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ textarea {
 .button, button, input[type=submit], input[type=reset], input[type=button], input[type=file]::file-selector-button {
   display: inline-block;
   padding: 5px 10px;
-  text-align: center;
+  text-align: left;
   text-decoration: none;
   white-space: nowrap;
   background-color: #ffffff;
